Fix loading spinner not centered

--- a/frontend/src/app/tasks/tasks.component.scss
+++ b/frontend/src/app/tasks/tasks.component.scss
@@ -23,7 +23,7 @@
 
 .loading_spinner {
   position: relative;
-  margin-top: calc(50vh - 100px);
-  margin-left: 50%;
-  margin-right: 50%;
+  margin-top: calc(50vh - 50px - 64px);
+  margin-left: calc(50vw - 50px);
+  margin-right: calc(50vw - 50px);
 }
